# socket-service

./: Cargo.toml
.github/workflows/: deploy.yml
cdk/: index.spec.ts  index.ts  package-lock.json  package.json  tsconfig.json
core/: Cargo.toml
core/src/: lib.rs  logger.rs  variables.rs
lambdas/connect/: Cargo.toml
lambdas/connect/src/: main.rs
lambdas/default/: Cargo.toml
lambdas/default/src/: main.rs
lambdas/disconnect/: Cargo.toml
lambdas/disconnect/src/: main.rs
