[workspace]
members = ["lambdas/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stephen Kelzer <stephen@stephenkelzer.com>"]

[workspace.dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.185"
serde_json = "1.0.99"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
