[workspace]
resolver = "2"
members = ["lambdas/*", "core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stephen Kelzer <stephen@stephenkelzer.com>"]

[workspace.dependencies]
aws-sdk-apigatewaymanagement = "0.33.0"
aws-sdk-dynamodb = "0.33.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.185"
serde_json = "1.0.99"
tokio = { version = "1", features = ["full"] }
